Fix letter spacing

--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@
 html {
   font-size: 100%;
   font-family: "Slabo 27px";
-  letter-spacing: 1px;
+  letter-spacing: 1.75px;
 }
 
 body {
@@ -289,6 +289,7 @@ i {
     color: $gray;
     font-size: 22px;
     font-style: italic;
+    letter-spacing: 1px;
   }
 
   .comments {
